Add: Schliptt: The Philosophy of Karl Popper

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -982,6 +982,10 @@
         and
         <a href="http://ontology.buffalo.edu/stove/500-600.htm"><i class="booktitle">Popper and After</i> online</a>.
       </li>
+      <li>Schlipp, Paul A.:
+        <i class="booktitle">The Philosophy of Karl Popper</i>. Open Court, 1988.
+        <!--16.05.2021: €37,99: https://www.thalia.de/shop/home/artikeldetails/ID45139116.html -->
+      </li>
 
       <li>Oreskes, Naomi:
         <i class="booktitle">Why Trust Science?</i>. Princeton University Press, 2019. (376 pages)
