add: Reutlinger et al: Ceteris Paribus Laws

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1233,6 +1233,10 @@
         <a href="https://philosophy.stackexchange.com/q/75739/23586">Is there a universally accepted definition of what constitutes 'science' from a philosophy of science perspective?</a>
         This question was posted on Philosophy Stack Exchange in August 2020.
       </li>
+      <li>Reutlinger, Alexander; Schurz, Gerhard; Hüttemann, Andreas:
+        <a href="https://plato.stanford.edu/archives/spr2011/entries/ceteris-paribus/">Ceteris Paribus Laws</a>,
+        <i class="website">Stanford Encylopedia of Philosophy</i>, 14.03.2011.
+      </li>
       <!--li>Shermer, Michael:
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
