Add: h2: History of the Humanities

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -169,7 +169,7 @@
         </li>
         <li>Small, Helen:
           <i class="booktitle">The Value of the Humanities</i>.
-          Oxford University Press, 2013.
+          Oxford University Press, 2013. (224 pages)
           <a href="http://ukcatalogue.oup.com/product/9780199683864.do"><abbr>ISBN</abbr> 978-0-19-968386-4</a>.
         </li>
         <li>Belfiore, Eleonora; Upchurch, Anna (editors):
@@ -914,14 +914,28 @@
     </section>
 
     <section>
+      <h2>History of the Humanities</h2>
+      <ul>
+        <li>Turner, James:
+          <i class="booktitle">Philology: The Forgotten Origins of the Modern Humanities</i>. Princeton University Press, 2015.
+          <a href="https://press.princeton.edu/books/paperback/9780691168586/philology"><abbr>ISBN</abbr> 9780691168586</a>.
+        </li>
+        <li><span lang="nl">Bod, Rens</span>:
+          <i class="booktitle">A New History of the Humanities: The Search for Principles and Patterns from Antiquity to the Present</i>. Translated by Lynn Richards. Oxford University Press, 2015 (2013). (400 pages)
+          <a href="https://global.oup.com/academic/product/a-new-history-of-the-humanities-9780198758396"><abbr>ISBN</abbr> 9780198758396</a>.
+        </li>
+        <li><span lang="nl">Bod, Rens:
+          <i class="booktitle">De Vergeten wetenschappen. Een geschiedenis van de humaniora</i>. Prometheus</span>, 2010. (520 pages)
+          <a href="https://uitgeverijprometheus.nl/catalogus/de-vergeten-wetenschappen.html" hreflang="nl"><abbr>ISBN</abbr> 9789035134850</a>.
+        </li>
+      </ul>
+    </section>
+
+    <section>
       <h2>Miscellaneous Other Links</h2>
       <ul>
         <li>
           <a href="http://vos.ucsb.edu/">Voice of the Shuttle</a>.
-        </li>
-        <li>Turner, James:
-          <i class="booktitle">Philology: The Forgotten Origins of the Modern Humanities</i>. Princeton University Press, 2015.
-          <a href="https://press.princeton.edu/books/paperback/9780691168586/philology"><abbr>ISBN</abbr> 9780691168586</a>.
         </li>
         <li>Booth, Wayne C. (editor):
           <i class="booktitle">The Knowledge Most Worth Having</i>. University of Chicago Press, 1967. (226 pages)
@@ -968,8 +982,7 @@
           <i class="blog">Open Culture</i>, 14.01.2008.
         </li>
         <li>Kahn, Victoria:
-          <i class="booktitle">The Trouble with Literature</i>.
-          Clarendon Lectures in English. Oxford University Press, 2020. (208 pages)
+          <i class="booktitle">The Trouble with Literature</i>. Clarendon Lectures in English. Oxford University Press, 2020. (208 pages)
           <a href="https://global.oup.com/academic/product/the-trouble-with-literature-9780198808749"><abbr>ISBN</abbr> 9780198808749</a>.
           <br />From the publisher's book description:
           <q>This book, based on the Clarendon Lectures in English for 2017, argues that the literature of the English Reformation marks a turning point in Western thinking about literature and literariness.
