Add: Bod: Een wereld van patronen

--- a/science/index.html
+++ b/science/index.html
@@ -454,6 +454,10 @@
           <i class="booktitle">The Lagoon: How Aristotle Invented Science</i>. Bloomsbury, 2014. (512 pages)
           <a href="https://www.bloomsbury.com/uk/the-lagoon-9781408836200/"><abbr>ISBN</abbr> 9781408836200</a>.
         </li>
+        <li><span lang="nl">Bod, Rens:
+          <i class="booktitle">Een Wereld vol patronen</i>. Prometheus,</span> 2019. (480 pages)
+          <a href="https://uitgeverijprometheus.nl/catalogus/een-wereld-vol-patronen.html" hreflang="nl"><abbr>ISBN</abbr> 9789035136793</a>.
+        </li>
         <li>Harrison, Peter; Roberts, Jon H. (editors): <i class="booktitle">Science Without God? Rethinking the History of Scientific Naturalism</i>.
           Ian Ramsey Centre Studies in Science and Religion. Oxford University Press, 2019. (288 pages)
           <a href="https://global.oup.com/academic/product/science-without-god-9780198834588"><abbr>ISBN</abbr> 9780198834588</a>.
