Add: Beyrodt: Jüdisches Sühne-Ritual - Das Missverständnis vom Sündenbock

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -420,6 +420,10 @@
           <i class="booktitle">The Oxford Handbook of Early Christian Apocrypha</i>. Oxford Handbooks. Oxford University Press, 2018. (496 pages)
           <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-early-christian-apocrypha-9780198801252"><abbr>ISBN</abbr> 9780198801252</a>.
         </li>
+        <li><span lang="de">Beyrodt, Gerald:
+          <a href="https://www.deutschlandfunkkultur.de/juedisches-suehne-ritual-das-missverstaendnis-vom.1278.de.html?dram:article_id=500407" hreflang="de">Jüdisches Sühne-Ritual - Das Missverständnis vom "Sündenbock"</a>,
+          <i class="website">Deutschlandfunk Kultur</i>,</span> 18.07.2021.
+        </li>
       </ul>
     </section>
 
