add: Baggott: Imre Lakatos and the philosophy of bad science

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1237,11 +1237,15 @@
         <a href="https://plato.stanford.edu/archives/spr2011/entries/ceteris-paribus/">Ceteris Paribus Laws</a>,
         <i class="website">Stanford Encylopedia of Philosophy</i>, 14.03.2011.
       </li>
+      <li>Baggott, Jim:
+        <a href="https://aeon.co/essays/imre-lakatos-and-the-philosophy-of-bad-science">Imre Lakatos and the philosophy of bad science</a>,
+        <i class="website">Aeon Essays</i>, 05.05.2020..
+      </li>
       <!--li>Shermer, Michael:
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
       </li--><!--referenced in Wikipedia article "logology"; @@check -->
-      <!--@@check: Rens Bod (Univeristy of Amsterdam humanities professor - cited by Michael Shermer-->
+      <!--@@check: Rens Bod (University of Amsterdam humanities professor - cited by Michael Shermer-->
     </ul>
     <!--"What's the distinction between a *narrative* and an *essay*?" https://literature.stackexchange.com/questions/8753/whats-the-distinction-between-a-narrative-and-an-essay
       'During a recent symposium a speaker stated that "Thomas Kuhn's book The Structure of Scientific Revolutions was not a narrative, it was an essay."'
