--- a/humanities/index.html
+++ b/humanities/index.html
@@ -988,6 +988,10 @@
           <q>(&hellip;) <i class="booktitle">The Novel: A Survival Skill</i> is the fruit of a lifetime's search for a different, more immediate, but again systematic and serious way of talking about literature.
           Developed over many years, it offers a completely new account of the relationship between a writer, his or her work, and the reader. As such it radically undermines traditional literary criticism and the various criteria used for evaluating a work of fiction. (&hellip;)</q>
         </li>
+        <li>Levenson, Michael:
+          <i class="booktitle">The Humanities and Everyday Life</i>. The Literary Agenda. Oxford University Press, 2017. (192 pages)
+          <a href="https://global.oup.com/academic/product/the-humanities-and-everyday-life-9780198808299"><abbr>ISBN</abbr> 9780198808299</a>.
+        </li>
         <li>Kahn, Victoria:
           <i class="booktitle">The Trouble with Literature</i>. Clarendon Lectures in English. Oxford University Press, 2020. (208 pages)
           <a href="https://global.oup.com/academic/product/the-trouble-with-literature-9780198808749"><abbr>ISBN</abbr> 9780198808749</a>.
