Add: Kilgour: Milton's Poetical Thought

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -992,6 +992,12 @@
           <i class="booktitle">The Humanities and Everyday Life</i>. The Literary Agenda. Oxford University Press, 2017. (192 pages)
           <a href="https://global.oup.com/academic/product/the-humanities-and-everyday-life-9780198808299"><abbr>ISBN</abbr> 9780198808299</a>.
         </li>
+        <li>Kilgour, Maggie:
+          <i class="booktitle">Milton's Poetical Thought</i>. The Literary Agenda. Oxford University Press, August 2021. (144 pages)
+          <a href="https://global.oup.com/academic/product/miltons-poetical-thought-9780198808824"><abbr>ISBN</abbr> 9780198808824</a>.
+          <br />From the publisher's book description:
+          <q>Uses Milton to defend the value of poetry in a world that only measures value economically</q>.
+        </li>
         <li>Kahn, Victoria:
           <i class="booktitle">The Trouble with Literature</i>. Clarendon Lectures in English. Oxford University Press, 2020. (208 pages)
           <a href="https://global.oup.com/academic/product/the-trouble-with-literature-9780198808749"><abbr>ISBN</abbr> 9780198808749</a>.
