Add: Billington: Is Literature Healthy?

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -998,6 +998,10 @@
           <br />From the publisher's book description:
           <q>Uses Milton to defend the value of poetry in a world that only measures value economically</q>.
         </li>
+        <li>Billington, Josie:
+          <i class="booktitle">Is Literature Healthy?</i>. The Literary Agenda. Oxford University Press, 2016. (160 pages)
+          <a href="https://global.oup.com/academic/product/is-literature-healthy-9780198724698"><abbr>ISBN</abbr> 9780198724698</a>.
+        </li>
         <li>Kahn, Victoria:
           <i class="booktitle">The Trouble with Literature</i>. Clarendon Lectures in English. Oxford University Press, 2020. (208 pages)
           <a href="https://global.oup.com/academic/product/the-trouble-with-literature-9780198808749"><abbr>ISBN</abbr> 9780198808749</a>.
