Add: Davis: Reading and the Reader

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -1002,6 +1002,10 @@
           <i class="booktitle">Is Literature Healthy?</i>. The Literary Agenda. Oxford University Press, 2016. (160 pages)
           <a href="https://global.oup.com/academic/product/is-literature-healthy-9780198724698"><abbr>ISBN</abbr> 9780198724698</a>.
         </li>
+        <li>Davis, Philip:
+          <i class="booktitle">Reading and the Reader</i>. The Literary Agenda. Oxford University Press, 2013. (160 pages)
+          <a href="https://global.oup.com/academic/product/reading-and-the-reader-9780199683185"><abbr>ISBN</abbr> 9780199683185</a>.
+        </li>
         <li>Kahn, Victoria:
           <i class="booktitle">The Trouble with Literature</i>. Clarendon Lectures in English. Oxford University Press, 2020. (208 pages)
           <a href="https://global.oup.com/academic/product/the-trouble-with-literature-9780198808749"><abbr>ISBN</abbr> 9780198808749</a>.
