Add: Shermer: Scientia Humanitatis

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1241,10 +1241,15 @@
         <a href="https://aeon.co/essays/imre-lakatos-and-the-philosophy-of-bad-science">Imre Lakatos and the philosophy of bad science</a>,
         <i class="website">Aeon Essays</i>, 05.05.2020..
       </li>
-      <!--li>Shermer, Michael:
-        <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
-        <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
-      </li--><!--referenced in Wikipedia article "logology"; @@check -->
+      <li>Shermer, Michael:
+        <a href="https://michaelshermer.com/sciam-columns/scientia-humanitatis/"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
+        <i class="blog">Michael Shermer</i>, June 2015 (originally published in <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015)).
+        <br />Shermer writes that he gave up on the humanities after the Sokal affair but that he is now reconsidering his position after an encounter with humanities professor Rens Bod:
+        <q>Bod pointed out that my definition of science—a set of methods that describes and interprets observed or inferred phenomena, past or present, aimed at testing hypotheses and building theories—applies to such humanities fields as philology, art history, musicology, linguistics, archaeology, historiography and literary studies.</q>
+        Rens Bod had given the example of the fifteenth-century humanist <a href="https://en.wikipedia.org/wiki/Lorenzo_Valla">Lozenzo Valla</a>,
+        who had shown that the <a href="https://en.wikipedia.org/wiki/Donation_of_Constantine">Donation of Constantine</a> was a forgery.
+        Bod poined out that <q>Valla used historical, linguistic and philological evidence, including counterfactual reasoning, to rebut the document</q>.
+      </li><!--referenced in Wikipedia article "logology"-->
       <!--@@check: Rens Bod (University of Amsterdam humanities professor - cited by Michael Shermer-->
     </ul>
     <!--"What's the distinction between a *narrative* and an *essay*?" https://literature.stackexchange.com/questions/8753/whats-the-distinction-between-a-narrative-and-an-essay
