Add: Haidt: The Righteous Mind

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -270,6 +270,15 @@
         <i class="booktitle">Sommes-nous naturellement moraux&nbsp;?</i> Fondements de la politique. Presses universitaires de France,</span> 2011. (304 pages)
         <a href="https://www.puf.com/content/Sommes-nous_naturellement_moraux" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-057076-9</a>.
       </li>
+      <li>Haidt, Jonathan:
+        <i class="booktitle">The Righteous Mind: Why Good People are Divided by Politics and Religion</i>. Penguin, 2012/2013. (528 pages)
+        <a href="https://www.penguin.co.uk/books/56726/the-righteous-mind/9780141039169.html"><abbr>ISBN</abbr> 9780141039169</a>.
+        <br />From the publisher's book description:
+        <q>(&hellip;) Jonathan Haidt reveals that we often find it hard to get along because our minds are hardwired to be moralistic, judgemental and self-righteous.
+        He explores how morality evolved to enable us to form communities, and how moral values are not just about justice and equality - for some people authority, sanctity or loyalty matter more.
+        Morality binds and blinds, but, using his own research, Haidt proves it is possible to liberate ourselves from the disputes that divide good people.</q>
+        <br />See also the website <a href="https://righteousmind.com/">The Righteous Mind</a>.
+      </li>
       <li>
         <a href="http://www.ethics.be/ethics/index.php?LAN=E">Ethics.be (English)</a>&nbsp;/
         <a href="http://www.ethics.be/ethics/index.php?LAN=N" hreflang="nl" lang="nl">Ethics.be (Nederlands)</a>:
