Shorter URL for pflegeporta.ch resources; new URL for Choluj and Joerden

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -449,7 +449,7 @@
         <br />This is the first article about the exanthin reaction.
       </li>
       <!-- 
-      <li>Fleck, Ludwik: 
+      <li>Fleck, Ludwik:
         &ldquo;<span lang="pl">O niektórych swoistych cechach myślenia lekarskiego. Notatki z IV. Posiedzenia Towarzystwa Miłośników Historji Medycyny we Lwowie w dnia 20.IV.1926r. Dr. Józef Fritz</span>&rdquo;
         (On some specific features of medical thinking. Notes from the 4th meeting of the Society of Friends of the History of Medicine in Lvov on 20.04.1926. Dr. Joseph Fritz).
         <i class="journal" lang="pl">Archiwum Historji i Filozofji Medycyny</i>, 5:2: 298.
@@ -530,25 +530,25 @@
     <p>Posthumous collections of Fleck's writings:</p>
     <ul>
       <li lang="de">Fleck, Ludwik: 
-        <i class="booktitle">Denkstile und Tatsachen - Gesammelte Schriften und Zeugnisse</i>. 
+        <i class="booktitle">Denkstile und Tatsachen - Gesammelte Schriften und Zeugnisse</i>.
         Herausgegeben von Sylwia Werner und Claus Zittel unter Mitarbeit von 
         <a href="https://en.wikipedia.org/wiki/Frank_W._Stahnisch">Frank Stahnisch</a>. Suhrkamp, 2011. 
         <a href="http://www.suhrkamp.de/buecher/denkstile_und_tatsachen-ludwik_fleck_29553.html"><abbr>ISBN</abbr> 978-3-518-29553-3</a>.
-        <br /><span lang="en-GB">This volume of over 600 pages contains a selection of articles; 
+        <br /><span lang="en-GB">This volume of over 600 pages contains a selection of articles;
         reports and documents about Fleck's work in the Nazi concentration camps;
         and biographical materials (especially correspondence with other philosophers and scientists).
         </span>
       </li>
-      <li><span lang="de">Fleck, Ludwik</span>: 
-        <i class="booktitle">Erfahrung und Tatsache - Gesammelte Aufsätze</i>. 
-        Mit einer Einleitung herausgegeben von Lothar Schäfer und Thomas Schnelle. Suhrkamp, 1983. 
-        <a href="http://www.suhrkamp.de/buecher/erfahrung_und_tatsache-ludwik_fleck_28004.html"><abbr>ISBN</abbr> 978-3-518-28004-1</a>. 
+      <li><span lang="de">Fleck, Ludwik</span>:
+        <i class="booktitle">Erfahrung und Tatsache - Gesammelte Aufsätze</i>.
+        Mit einer Einleitung herausgegeben von Lothar Schäfer und Thomas Schnelle. Suhrkamp, 1983.
+        <a href="http://www.suhrkamp.de/buecher/erfahrung_und_tatsache-ludwik_fleck_28004.html"><abbr>ISBN</abbr> 978-3-518-28004-1</a>.
         <br /><span lang="en-GB">In addition to an introduction and a bibliography of Fleck's writings, the book contains the following articles:</span>
-        &ldquo;Über einige besondere Merkmale des ärztlichen Denkens&rdquo; (1927), 
-        &ldquo;Zur Krise der »Wirklichkeit«&rdquo; (1929), 
-        &ldquo;Über die wissenschaftliche Beobachtung und die Wahrnehmung im allgemeinen&rdquo; (1935), 
-        &ldquo;Das Problem einer Theorie des Erkennens&rdquo; (1936), 
-        &ldquo;Wissenschaftstheoretische Probleme&rdquo; (1946), 
+        &ldquo;Über einige besondere Merkmale des ärztlichen Denkens&rdquo; (1927),
+        &ldquo;Zur Krise der »Wirklichkeit«&rdquo; (1929),
+        &ldquo;Über die wissenschaftliche Beobachtung und die Wahrnehmung im allgemeinen&rdquo; (1935),
+        &ldquo;Das Problem einer Theorie des Erkennens&rdquo; (1936),
+        &ldquo;Wissenschaftstheoretische Probleme&rdquo; (1946),
         &ldquo;Schauen, sehen, wissen&rdquo; (1947),
         &ldquo;Krise in der Wissenschaft. Zu einer freien und menschlichen Wissenschaft&rdquo; (1960).
         <span lang="en-GB">These articles were also included in </span>
@@ -560,7 +560,7 @@
     <ul>
       <li>Allen, Arthur: 
         <i class="booktitle">The Fantastic Laboratory of Dr. Weigl: How Two Brave Scientists Battled Typhus and Sabotaged the Nazis</i>. 
-        W. W. Norton, 2014. (400 p.) 
+        W. W. Norton, 2014. (400 pages)
         <a href="http://books.wwnorton.com/books/detail.aspx?id=4294978716"><abbr>ISBN</abbr> 978-0-393-08101-5</a>.
         <br />This book is about <a href="https://en.wikipedia.org/wiki/Rudolf_Weigl">Rudolf Weigl's</a>
         work on the development of the first effective vaccine against typhus,
@@ -575,7 +575,7 @@
         <a href="http://www.iep.utm.edu/s-change/">Scientific Change</a>,
         <i class="website">Internet Encyclopedia of Philosophy</i>, (no date).
         <br />This article contains a <a href="http://www.iep.utm.edu/s-change/#SH4aL">short section on Ludwik Fleck</a>,
-        that also points out that Thomas Kuhn 
+        that also points out that Thomas Kuhn
         <q>regretted having used the notion of a gestalt switch to characterize changes in a community because “communities do not have experiences, much less gestalt switches.”</q>.
       </li>
       <li>Baldamus, Wilhelm:
@@ -586,26 +586,27 @@
       </li>
       <li lang="fr">Bayle, François:
         <i class="booktitle">Croix gammée contre caducée. Les expériences humaines en Allemagne pendant la deuxième guerre mondiale</i>.
-        Neustadt: Impr. nationale, 1950. 
+        Neustadt: Impr. nationale, 1950.
         (<abbr>Cf.</abbr> <a href="http://data.bnf.fr/12554392/francois_bayle_croix_gammee_contre_caducee/"><abbr>BNF</abbr></a>)
       </li>
       <li lang="de">Brühe, Roland; Theis, Sabine: 
         <a href="http://rolandbruehe.de/ludwik-fleck/ludwik-fleck-person/">Zur Person Ludwik Fleck</a>,
-        <span lang="en-GB">excerpted from</span> 
-        <a class="booktitle" href="http://www.pflegeportal.ch/pflegeportal/Pflege_Portal_Suche_in_WISE.php?evn=srm&kc=0,23,0,0,0&pmids=9&st=1&rpp=3&fkid=fkid&nsfkid=15,1&msv=">Denkstile und professioneller Pflegeprozess</a> 
+        <span lang="en-GB">excerpted from</span>
+        <a class="booktitle" href="http://www.pflegeportal.ch/pflegeportal/Pflege_Portal_Suche_in_WISE.php?evn=srm&amp;kc=0,23,0,0,0&amp;pmids=9&amp;st=1">Denkstile und professioneller Pflegeprozess</a>
+        <!--Old URL: http://www.pflegeportal.ch/pflegeportal/Pflege_Portal_Suche_in_WISE.php?evn=srm&kc=0,23,0,0,0&pmids=9&st=1&rpp=3&fkid=fkid&nsfkid=15,1&msv= -->
         (Diplomarbeit, Katholische Hochschule Nordrhein-Westfalen, 05.07.2004 - 20.09.2009).
-        (Brühe, Roland; Theis, Sabine: 
+        (Brühe, Roland; Theis, Sabine:
         <i class="booktitle">Denkstile und professioneller Pflegeprozess. Wie beurteilen Lehrende an Krankenpflegeschulen Pflegeplanungen von SchülerInnen?</i>,
         Saarbrücken, <abbr>VDM</abbr> Verlag Dr. Müller, 2008. <abbr>ISBN</abbr>978-3-639-07662-2.)
       </li>
       <li lang="de">Chołuj, Bożena; Joerden, Jan C., <abbr>Hrsg.</abbr>:
         <i class="booktitle">Von der wissenschaftlichen Tatsache zur Wissensproduktion: Ludwik Fleck und seine Bedeutung für die Wissenschaft und Praxis</i>.
-        Studien zur Ethik in Ostmitteleuropa. Frankfurt am Main: Peter Lang, 2007. 
-        <a href="http://www.peterlang.com/index.cfm?event=cmp.ccc.seitenstruktur.detailseiten&seitentyp=produkt&pk=40383"><abbr>ISBN</abbr> 978-3-631-56508-7</a>.
+        Studien zur Ethik in Ostmitteleuropa. Frankfurt am Main: Peter Lang, 2007.
+        <a href="https://www.peterlang.com/abstract/title/49884"><abbr>ISBN</abbr> 978-3-631-56508-7</a>.
       </li>
-      <li>Cohen, Robert S.; Schnelle, Thomas, <abbr>eds.</abbr>: 
-        <i class="booktitle">Cognition and Fact: Materials on Ludwik Fleck</i>. 
-        Boston Studies in the Philosophy and History of Science. Springer, 1986. 
+      <li>Cohen, Robert S.; Schnelle, Thomas, <abbr>eds.</abbr>:
+        <i class="booktitle">Cognition and Fact: Materials on Ludwik Fleck</i>.
+        Boston Studies in the Philosophy and History of Science. Springer, 1986.
         <a href="http://www.springer.com/philosophy/epistemology+and+philosophy+of+science/book/978-90-277-1902-7"><abbr>ISBN</abbr> 978-94-010-8504-5</a>.
       </li>
       <li lang="de">Egloff, Rainer, <abbr>ed.</abbr>:
