Add: Molteni: The 60-Year Old Scientific Screwup ...

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -889,6 +889,12 @@
         <a href="https://shocknawe.hypotheses.org/510" hreflang="de">Resonanz schlägt Logik (?) – Tribale Epistemologien</a>,
         <i class="blog" lang="en">Shock and Awe</i>, 25.10.2017.
       </li>
+      <li>Molteni, Megan:
+        <a href="https://www.wired.com/story/the-teeny-tiny-scientific-screwup-that-helped-covid-kill/">The 60-Year-Old Scientific Screwup That Helped Covid Kill</a>,
+        <i class="magazine">Wired</i>, 13.05.2021 (published in the July/August 2021 issue of the magazine).
+        <br />Tweeted by <a href="https://twitter.com/nathanelamarHK/status/1394512977231896579">Nathanel Amar / @nathanelamarHK on 1!.05.2021</a>:
+        <q cite="https://twitter.com/nathanelamarHK/status/1394512977231896579">I'm late to the party, but this Wired article on droplets and aerosols is absolutely fantastic. Textbook definition of how scientific paradigms are created/challenged, echoing Ludwik Fleck's work and his notion of "thought collectives":</q>
+      </li>
     </ul>
   </main>
 
