Add: Löwy: Ludwik Fleck where are you now that we need you?

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -895,6 +895,14 @@
         <br />Tweeted by <a href="https://twitter.com/nathanelamarHK/status/1394512977231896579">Nathanel Amar / @nathanelamarHK on 1!.05.2021</a>:
         <q cite="https://twitter.com/nathanelamarHK/status/1394512977231896579">I'm late to the party, but this Wired article on droplets and aerosols is absolutely fantastic. Textbook definition of how scientific paradigms are created/challenged, echoing Ludwik Fleck's work and his notion of "thought collectives":</q>
       </li>
+      <li>Löwy, Ilana:
+        <a href="http://somatosphere.net/2020/ludwik-fleck-where-are-you-now.html/">Ludwik Fleck where are you now that we need you? Covid-19 and the genesis of epidemiological facts</a>,
+        <i class="blog">Somatosphere</i>, 16.10.2020.
+        <!--@@to PDF-->
+        <br />Tweeted by <a href="https://twitter.com/lmm_ueller/status/1409790677530128384">Lucas Mueller / @lmm_ueller on 29.06.2021</a>:
+        <q cite="https://twitter.com/lmm_ueller/status/1409790677530128384">Alongside <a href="https://twitter.com/LowyIlana">@LowyIlana</a>'s
+        trenchant evocation of Ludwik Fleck on COVID diagnostics:"The ‘collective experimentation’ that led to the genesis and development of the diagnosis of syphilis started with political considerations. It ended with political decisions"</q>
+      </li>
     </ul>
   </main>
 
