Add: InPho project

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -903,6 +903,9 @@
         <q cite="https://twitter.com/lmm_ueller/status/1409790677530128384">Alongside <a href="https://twitter.com/LowyIlana">@LowyIlana</a>'s
         trenchant evocation of Ludwik Fleck on COVID diagnostics:"The ‘collective experimentation’ that led to the genesis and development of the diagnosis of syphilis started with political considerations. It ended with political decisions"</q>
       </li>
+      <li><a href="https://www.inphoproject.org/thinker/5481">Ludwik Fleck</a>,
+        <i class="website">InPho (Internet Philosophy Ontology project)</i> (no date; accessed on 08.08.2021).
+      </li>
     </ul>
   </main>
 
