Add notice that site has moved.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </nav>
 
   <main>
+    <p class="site-moved-warning">This website is no longer maintained here. It has moved to <a href="https://cstrobbe.gitlab.io/philosophy-and-science/">GitLab</a>.</p>
     <blockquote id="introquote">
       <p>
         <q>It is of the nature of idea to be communicated: written, spoken, done. The idea is like grass.
