--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -374,6 +374,12 @@
           <li><i class="booktitle">Permutation City</i> (1994), a science-fiction novel by Greg Egan.</li>
         </ul>
       </li>
+      <li>
+        <a href="https://claire-ai.org/"><abbr>CLAIRE</abbr>: Confederation of Laboratories for Artificial Intelligence Research in Europe</a>:
+        launched in June 2018:
+        <blockquote><abbr>CLAIRE</abbr> is an initiative by the European <abbr>AI</abbr> community that seeks to strengthen European excellence in <abbr>AI</abbr> research and innovation.
+          To achieve this, <abbr>CLAIRE</abbr> proposes the establishment of a pan-European Confederation of Laboratories for Artificial Intelligence Research in Europe that achieves “brand recognition” similar to <abbr>CERN</abbr>.</blockquote>
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
